# spangap-net

./: .gitignore  INTERNALS.md  INTERNALS.old.md  LICENSE.md  README.md  straddle.yaml
browser/: package.json
browser/src/modules/: net.ts
browser/src/panels/: MdnsPanel.vue  NetworkPanel.vue  WifiScanDialog.vue
docs/: mdns-internals.md  mdns.md  net-internals.md  net.md  ntp-internals.md  ntp.md  tls-internals.md  tls.md
esp-idf/: CMakeLists.txt  idf_component.yml
esp-idf/conditional/spangap-lcd/src/: mdns_lcd.cpp  net_lcd.cpp
esp-idf/include/: net.h  ntp.h  spangap_mdns.h  tls.h
esp-idf/src/: net.cpp  ntp.cpp  spangap_mdns.cpp  tls.cpp  wget.cpp
